# -University-Cone-render-OpenGL

./: CMakeLists.txt  main.cpp  skyboxes.h
camera/: camera.cpp  camera.h
coneobject/: cone_approx.h
pointlight/: pointlight.cpp  pointlight.h
shaders/: shader.frag  shader.vert
skybox/: skybox.cpp  skybox.h
